@@ -34,7 +34,7 @@
 .\"
 .\" Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
 .\"
-.\" Sccsid @(#)e.in	1.2 (gritter) 8/13/05
+.\" Sccsid @(#)e.in	1.3 (gritter) 9/3/06
 .\"
 .nr _0 \n(.c
 .\"**********************************************************************
@@ -70,7 +70,7 @@
 .nr _F \\n(.f
 .nr _I \\n(.i
 .ev \\$1
-.ps \\n(_Su
+.ps \\n(_S
 .vs \\n(_Vu
 .ft \\n(_F
 'in \\n(_Iu
@@ -510,7 +510,7 @@
 .ce 0
 .fi
 .@F \\n(pf
-.sz \\n(ppu
+.sz \\n(pp
 .sp \\n(psu
 .ne \\n(.Lv+\\n(.Vu
 .ns
@@ -534,7 +534,7 @@
 .	el \
 .		ti +\\n(sou
 .	@F \\n(sf
-.	sz \\n(spu
+.	sz \\n(sp
 .	if \\$3>0 \
 .		$\\$3
 .	if \w"\\$2">0 \\$2.
@@ -543,7 +543,7 @@
 .el \
 .	sp \\n(psu
 .@F \\n(pf
-.sz \\n(ppu
+.sz \\n(pp
 ..
 .de uh
 .rn uh @T
